--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "author": "Tomás Guzmán <tomasg92@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "@devexpress/dx-react-chart": "^2.7.5",
+    "@devexpress/dx-react-chart-material-ui": "^2.7.5",
+    "@devexpress/dx-react-core": "^2.7.5",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
