--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-redux": "^7.2.0",
+    "react-responsive": "^8.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-swipeable": "^6.1.0",
