--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-swipeable": "^6.1.0",
+    "recharts": "^2.0.9",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
