--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/pickers": "^3.3.10",
     "@sandstreamdev/react-swipeable-list": "github:sandstreamdev/react-swipeable-list",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -13,6 +15,7 @@
     "animated-number-react": "^0.0.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.4.1",
+    "date-fns": "^2.21.1",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-datepicker": "^3.0.0",
