--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.9.4",
     "morgan": "^1.9.1",
+    "node-sass": "^8.0.0",
     "nodemon": "^2.0.2",
     "react-bootstrap-range-slider": "^0.3.2"
   },
