--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,15 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/pickers": "^3.3.10",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.1",
+    "@mui/styles": "^5.11.1",
     "@sandstreamdev/react-swipeable-list": "github:sandstreamdev/react-swipeable-list",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -16,9 +21,9 @@
     "axios": "^0.21.1",
     "date-fns": "^2.21.1",
     "node-sass": "^8.0.0",
-    "react": "^16.13.1",
+    "react": "^18.2.0",
     "react-datepicker": "^3.0.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "^18.2.0",
     "react-icons": "^3.10.0",
     "react-redux": "^7.2.0",
     "react-responsive": "^8.2.0",
