--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "animated-number-react": "^0.0.2",
     "axios": "^0.21.1",
     "date-fns": "^2.21.1",
+    "easy-peasy": "^5.2.0",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-datepicker": "^3.0.0",
