--- a/client/package.json
+++ b/client/package.json
@@ -3,39 +3,23 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.57",
-    "@material-ui/pickers": "^3.3.10",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.1",
     "@mui/styles": "^5.11.1",
+    "@mui/x-date-pickers": "^5.0.12",
     "@sandstreamdev/react-swipeable-list": "github:sandstreamdev/react-swipeable-list",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "animated-number-react": "^0.0.2",
     "axios": "^0.21.1",
-    "date-fns": "^2.21.1",
     "easy-peasy": "^5.2.0",
-    "node-sass": "^8.0.0",
     "react": "^18.2.0",
-    "react-datepicker": "^3.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^3.10.0",
     "react-redux": "^7.2.0",
     "react-responsive": "^8.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "react-swipeable": "^6.1.0",
-    "react-transition-group": "^4.4.5",
-    "recharts": "^2.0.9",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "react-transition-group": "^4.4.5"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
