--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,10 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.1",
     "@mui/styles": "^5.11.1",
-    "@mui/x-date-pickers": "^5.0.12",
+    "@mui/x-date-pickers": "^6.0.0-alpha.13",
     "@sandstreamdev/react-swipeable-list": "github:sandstreamdev/react-swipeable-list",
     "axios": "^0.21.1",
+    "dayjs": "^1.11.7",
     "easy-peasy": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
