--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "client": "npm start --prefix client",
     "clientinstall": "npm install --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix --legacy-peer-deps client && npm run build --prefix client",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --legacy-peer-deps --prefix client && npm run build --prefix client",
     "new-model": "node ./framework/newModel",
     "new-controller": "node ./framework/newController",
     "new-routes": "node ./framework/newRoutes",
