--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "lodash": "^4.17.15",
     "mongoose": "^5.9.4",
     "morgan": "^1.9.1",
-    "nodemon": "^2.0.2",
+    "nodemon": "^2.0.2"
   },
   "devDependencies": {
     "concurrently": "^5.1.0"
