Adjusts dialogs width, changes auth mechanism and reduces foot/reference items fonts

--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -1,6 +1,9 @@
 {
   "compilerOptions": {
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "paths": {
+      "@layout/*": ["./components/layout/*"]
+    }
   },
-  "include": ["src"]
+  "include": ["src/**/*"]
 }
