--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "dayjs": "^1.11.7",
     "easy-peasy": "^5.2.0",
+    "js-cookies": "^1.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^3.10.0",
