--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,9 @@
     "easy-peasy": "^5.2.0",
     "js-cookies": "^1.0.4",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^3.10.0",
     "react-redux": "^7.2.0",
