--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,10 @@
     "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^3.10.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^7.2.0",
     "react-responsive": "^8.2.0",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^6.13.0",
     "react-scripts": "3.4.1",
     "react-transition-group": "^4.4.5"
   },
