--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,16 @@
     "axios": "^0.21.1",
     "dayjs": "^1.11.7",
     "easy-peasy": "^5.2.0",
+    "i18next": "^23.2.3",
+    "i18next-browser-languagedetector": "^7.0.2",
+    "i18next-http-backend": "^2.2.1",
     "js-cookies": "^1.0.4",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.1",
     "react-icons": "^3.10.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^7.2.0",
