--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -1,8 +1,9 @@
 {
   "trailingComma": "es5",
   "tabWidth": 2,
-  "semi": true,
+  "semi": false,
   "singleQuote": true,
   "jsxSingleQuote": false,
-  "printWidth": 80
+  "printWidth": 80,
+  "arrowParens": "avoid"
 }
