--- a/client/package.json
+++ b/client/package.json
@@ -28,11 +28,12 @@
     "react-responsive": "^8.2.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "3.4.1",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "typescript": "^5.1.5"
   },
   "scripts": {
+    "build": "tsc",
     "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
