--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,7 @@
     "typescript": "^5.1.5"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "react-scripts --openssl-legacy-provider build",
     "start": "react-scripts --openssl-legacy-provider start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
