--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -18,7 +18,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "outDir": "build"
+    "noEmit": true
   },
   "include": [
     "src/**/*"
