fix(manifest, tab title): changes application name to Physfit

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Food",
-  "name": "Food",
+  "short_name": "Physfit",
+  "name": "Physfit",
   "icons": [
     {
       "src": "favicon.ico",
