--- a/.github/workflows/heroku-production.yml
+++ b/.github/workflows/heroku-production.yml
@@ -17,7 +17,7 @@ jobs:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           heroku_app_name: tom-food
       - name: Set up Heroku remote
-        uses: actions/heroku@v1
+        uses: actions/heroku@master
         with:
           args: 'git:remote -a tom-food'
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
