--- a/.github/workflows/heroku-production.yml
+++ b/.github/workflows/heroku-production.yml
@@ -11,16 +11,14 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
       - name: Login to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           heroku_app_name: tom-food
-      - name: Set up Heroku remote
-        uses: actions/heroku@master
-        with:
-          args: 'git:remote -a tom-food'
-          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+          heroku_email: tomasg92@gmail.com
+
       - name: Deploy to production in Heroku
         run: |
           cd app
