--- a/package.json
+++ b/package.json
@@ -10,14 +10,8 @@
     "start": "node app.js",
     "server": "nodemon app",
     "client": "npm start --prefix client",
-    "clientinstall": "npm install --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --legacy-peer-deps --prefix client && npm run build --prefix client",
-    "new-model": "node ./framework/newModel",
-    "new-controller": "node ./framework/newController",
-    "new-routes": "node ./framework/newRoutes",
-    "new-redux-files": "node ./framework/newReduxFiles",
-    "connect-redux": "node ./framework/connectRedux"
+    "build:client": "npm run build --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Tomás Guzmán <tomasg92@gmail.com>",
   "license": "ISC",
@@ -32,7 +26,7 @@
     "express-validator": "^6.4.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "mongoose": "^5.9.4",
+    "mongoose": "^8.16.1",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2"
   },
