--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "typescript": "^5.1.5"
   },
   "scripts": {
+    "prebuild": "npm install --legacy-peer-deps",
     "build": "react-scripts --openssl-legacy-provider build",
     "start": "react-scripts --openssl-legacy-provider start",
     "test": "react-scripts test",
